# chocodile

./: .gitignore  README.rst  backup.py  requirements.txt  setup.cfg  setup.py
backupmanager/: backup.py  cli.py  config.py  script.py
ini/: config.ini
