[metadata]
name = cloud-backup-manager
version = 0.1
summary = Rackspace cloud backup CLI
description-file = README.rst
author = Rackspace
author-e-mail = 
license = Apache-2
homepage = 
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Apache Software License :: 2.0
    Operating System :: Posix :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[pbr]
warnerrors = True
SKIP_GENERATE_AUTHORS = 1

[files]
packages = backupmanager

[entry_points]
console_scripts =
    cloud-backup-manager = backupmanager.cli:run

[wheel]
universal = 1    
